--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@firebase/database": "^1.0.5",
     "@mui/material": "^5.16.0",
-    "@reduxjs/toolkit": "^2.2.5",
+    "@reduxjs/toolkit": "^2.2.6",
     "bootstrap": "^5.3.3",
     "firebase": "^10.12.3",
     "js-md5": "^0.8.3",
@@ -25,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
+    "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
   },
   "devDependencies": {
